# AoC2023

./: .gitignore  LICENSE  aoc2023.opam  dune-project  test.py
lib/: common.ml  day01.ml  day01_2.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day09_2.ml  day10.ml  day11.ml  day12.ml  day12.pl  day13.ml  day14.ml  day15.ml  day16.ml  day16_simpler.ml  day17.ml  day17_2.ml  day18.ml  day19.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune  float_coord3.ml  graphs.ml  parsing.ml  rat_coord3.ml
nim/day25/: day25.nimble
nim/day25/src/: day25.nim
test/: dune  test_aoc2023.ml
