(lang dune 3.12)

(name aoc2023)
(version 1eea029-dirty)

(generate_opam_files true)

(source
 (github erickalkman/aoc2023))

(authors "Eric Kalkman")

(maintainers "Eric Kalkman")

;(license LICENSE)

;(documentation https://url/to/documentation)

(package
 (name aoc2023)
 (synopsis "Advent of Code 2023")
 (description "Advent of Code 2023")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
